Fix: Made grayscale more legible

--- a/css/theme.css
+++ b/css/theme.css
@@ -62,11 +62,11 @@
     --primary: #4f4f4f;
     --primary-hover: #373737;
     --secondary: #2b2b2b;
-    --tertiary: #454545;
-    --tertiary-disabled: #bbbbbb;
-    --color: #494949;
-    --color-washed: #4d4d4d;
-    --color-disabled: #7b7b7b;
+    --tertiary: #7d7d7d;
+    --tertiary-disabled: #454545;
+    --color: #b0b0b0;
+    --color-washed: #6a6a6a;
+    --color-disabled: #5c5c5c;
     --invert: invert(0);
     --text: #f5f5f5;
 }
